# nukefm-trader-bot

./: .gitignore  README.md  config.json  pyproject.toml
.claude/skills/nukefm-trader-bot/: SKILL.md
nukefm_trader_bot/: __init__.py  __main__.py  bot.py
tests/: test_bot.py
