[project]
name = "nukefm-trader-bot"
version = "0.1.0"
description = "LLM forecast trader for nuke.fm scalar Bags markets"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nukefm_trader_bot"]
